# Sources/EmailServerAPI/openapi.yaml
@@ -9,6 +9,23 @@ servers:
   - url: http://localhost:8080/
     description: local vapor server
 paths:
+  /smtp:
+    get:
+      tags:
+        - SMTP
+      operationId: smtp_active_connections
+      summary: Return an array of current SMTP connections
+      responses:
+        "200":
+          description: An array of SMTP connections
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SMTPServerStream_ConnectionIDState"
+        "500":
+          description: Something went wrong
   /smtp/connection:
     post:
       tags:
